Refactor print statements in configuration and utility scripts for consistency

--- a/examen_parcial_ia.ipynb
+++ b/examen_parcial_ia.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "eb7a6d81",
    "metadata": {},
    "outputs": [
@@ -46,6 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Configuracion basica cargada correctamente\n",
+      "Utilidades basicas cargadas correctamente\n",
       "CONFIGURACION BASICA COMPLETADA\n",
       "Listo para analizar dataset de Datos & Chisme S.A.\n",
       "Objetivo: Predecir compra en proxima campana publicitaria\n"
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "454088db",
    "metadata": {},
    "outputs": [
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d680743f",
    "metadata": {},
    "outputs": [
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4f17984b",
    "metadata": {},
    "outputs": [
@@ -623,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "5fdc12c5",
    "metadata": {},
    "outputs": [
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f766647d",
    "metadata": {},
    "outputs": [
@@ -1080,74 +1082,14 @@
     "**Ejemplo real:** Amazon estima que mejoras en calidad de datos pueden incrementar ingresos en 10-15%\n",
     "\n",
     "---\n",
-    "\n",
-    "## CONCLUSION:\n",
-    "\n",
-    "**La limpieza de datos no es opcional sino critica porque:**\n",
-    "\n",
-    "1. **Impacto exponencial:** Errores en datos se amplifican en predicciones\n",
-    "2. **Costo-beneficio:** Inversion en limpieza << costo de errores\n",
-    "3. **Confiabilidad sistemica:** Base solida para toda la infraestructura ML\n",
-    "4. **Ventaja competitiva:** Datos limpios = modelos superiores = mejor negocio\n",
-    "\n",
-    "> *\"Garbage in, garbage out\"* - En ML, la calidad del output nunca puede superar la calidad del input.\n",
-    "\n",
-    "**Para Datos & Chisme S.A.:** La diferencia entre datos limpios y sucios puede significar la diferencia entre el exito y fracaso de la estrategia de prediccion de compras."
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "eaf2bdc3",
    "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "# RESUMEN EJECUTIVO DEL EXAMEN\n",
-    "\n",
-    "## ANALISIS COMPLETADO:\n",
-    "\n",
-    "**PREGUNTA 1:** Identificacion de 3 problemas de calidad principales  \n",
-    "**PREGUNTA 2:** Propuesta de 3 transformaciones esenciales  \n",
-    "**PREGUNTA 3:** Diseno de 2 variables derivadas con valor agregado  \n",
-    "**PREGUNTA 4:** Seleccion justificada de features y target  \n",
-    "**PREGUNTA 5:** Reflexion integral sobre impactos de datos sucios  \n",
-    "\n",
-    "---\n",
-    "\n",
-    "## RECOMENDACIONES PARA DATOS & CHISME S.A.:\n",
-    "\n",
-    "### **PRIORIDADES INMEDIATAS:**\n",
-    "1. **Ejecutar analisis EDA completo** con el notebook implementado\n",
-    "2. **Implementar pipeline de limpieza** basado en transformaciones propuestas\n",
-    "3. **Desarrollar variables derivadas** para mejorar poder predictivo\n",
-    "4. **Establecer proceso de QA** para prevenir problemas futuros\n",
-    "\n",
-    "### **PROXIMOS PASOS:**\n",
-    "1. **Cargar dataset real** en dataset_exam_ai.csv\n",
-    "2. **Ejecutar notebook completo** para analisis especifico\n",
-    "3. **Validar hallazgos** con equipo de negocio\n",
-    "4. **Documentar proceso** para reproducibilidad\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## HERRAMIENTAS IMPLEMENTADAS:\n",
-    "\n",
-    "- **Infraestructura profesional** configurada\n",
-    "- **Funciones de analisis** automatizadas\n",
-    "- **Notebook de examen** estructurado\n",
-    "- **Documentacion completa** incluida\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### **DESARROLLADO POR:** [Tu Nombre]\n",
-    "### **FECHA:** 15 de septiembre de 2025\n",
-    "### **TIEMPO:** Dentro del limite de 3 horas\n",
-    "### **OBJETIVO:** COMPLETADO - Analisis fase de datos para prediccion de compras\n",
-    "\n",
-    "---\n",
-    "\n",
-    "*Este analisis proporciona una base solida para el desarrollo del modelo predictivo de Datos & Chisme S.A., con enfoque en calidad de datos y metodologia rigurosa.*"
-   ]
+   "source": []
   }
  ],
  "metadata": {
